"" changed to "-" to make it clear that it's WIP rather than a bug

--- a/localisation/KR_American_Union_State_l_english.yml
+++ b/localisation/KR_American_Union_State_l_english.yml
@@ -159,73 +159,73 @@ TEX_rebuilding_the_pacific_desc:0 "It is time to rebuild the West Coast. While t
 TEX_rebuilding_new_england:0 "Rebuilding New England"
 TEX_rebuilding_new_england_desc:0 "It is time to rebuild New England. While the region tried to remain safe by working with the Canadians even this region of the country suffered the devastation consequences of the civil war"
 TEX_reclaim_south_west:0 "Reclaim the South West"
-TEX_reclaim_south_west_desc:0 ""
+TEX_reclaim_south_west_desc:0 "-"
 TEX_industrial_security_act:0 "The Industrial Security Act"
-TEX_industrial_security_act_desc:0 ""
+TEX_industrial_security_act_desc:0 "-"
 TEX_infastructure_renewel:0 "The Education Reform Bill"
-TEX_infastructure_renewel_desc:0 ""
+TEX_infastructure_renewel_desc:0 "-"
 TEX_soldier_bill:0 "Patriotic Soldiers Bill"
-TEX_soldier_bill_desc:0 ""
+TEX_soldier_bill_desc:0 "-"
 TEX_found_abc:0 "Found ABC"
-TEX_found_abc_desc:0 ""
+TEX_found_abc_desc:0 "-"
 TEX_economic_rebirth:0 "Economic Rebirth"
-TEX_economic_rebirth_desc:0 ""
+TEX_economic_rebirth_desc:0 "-"
 TEX_a_new_america:0 "A new America"
-TEX_a_new_america_desc:0 ""
+TEX_a_new_america_desc:0 "-"
 TEX_new_american_day:0 "New American Day"
-TEX_new_american_day_desc:0 ""
+TEX_new_american_day_desc:0 "-"
 
 ### Foci - Foreign Policy ###
 TEX_long_doctrine:0 "Long Doctrine"
-TEX_long_doctrine_desc:0 ""
+TEX_long_doctrine_desc:0 "-"
 TEX_war_plan_gold:0 "War Plan Gold"
-TEX_war_plan_gold_desc:0 ""
+TEX_war_plan_gold_desc:0 "-"
 TEX_anti_syndicalist_pact:0 "Anti-Syndicalist Pact"
-TEX_anti_syndicalist_pact_desc:0 ""
+TEX_anti_syndicalist_pact_desc:0 "-"
 TEX_embargo_international:0 "Embargo the International"
-TEX_embargo_international_desc:0 ""
+TEX_embargo_international_desc:0 "-"
 TEX_strike_the_international:0 "Strike the International"
-TEX_strike_the_international_desc:0 ""
+TEX_strike_the_international_desc:0 "-"
 TEX_war_plan_brown:0 "Plan Brown"
-TEX_war_plan_brown_desc:0 ""
+TEX_war_plan_brown_desc:0 "-"
 TEX_fate_of_the_philippines:0 "Reclaiming Alaska"
-TEX_fate_of_the_philippines_desc:0 ""
+TEX_fate_of_the_philippines_desc:0 "-"
 TEX_war_plan_purple:0 "War Plan Purple"
-TEX_war_plan_purple_desc:0 ""
+TEX_war_plan_purple_desc:0 "-"
 TEX_cuban_intervention:0 "Cuban Intervention"
-TEX_cuban_intervention_desc:0 ""
+TEX_cuban_intervention_desc:0 "-"
 TEX_haitian_intervention:0 "Haitian Intervention"
-TEX_haitian_intervention_desc:0 ""
+TEX_haitian_intervention_desc:0 "-"
 TEX_dominican_intervention:0 "Dominican Intervention"
-TEX_dominican_intervention_desc:0 ""
+TEX_dominican_intervention_desc:0 "-"
 TEX_mexican_intervention:0 "Mexican Intervention"
-TEX_mexican_intervention_desc:0 ""
+TEX_mexican_intervention_desc:0 "-"
 TEX_central_intervention:0 "Intervention in Central America"
-TEX_central_intervention_desc:0 ""
+TEX_central_intervention_desc:0 "-"
 TEX_panaman_intervention:0 "Panamá Intervention"
-TEX_panaman_intervention_desc:0 ""
+TEX_panaman_intervention_desc:0 "-"
 TEX_pax_american:0 "Pax Americana"
-TEX_pax_american_desc:0 ""
+TEX_pax_american_desc:0 "-"
 TEX_manifest_destiny:0 "Manifest Destiny"
-TEX_manifest_destiny_desc:0 ""
+TEX_manifest_destiny_desc:0 "-"
 TEX_reclaim_california:0 "Reclaiming the Pacific"
-TEX_reclaim_california_desc:0 ""
+TEX_reclaim_california_desc:0 "-"
 TEX_reclaim_new_england:0 "Reclaim New England"
-TEX_reclaim_new_england_desc:0 ""
+TEX_reclaim_new_england_desc:0 "-"
 TEX_reclaim_hawaii:0 "Reclaim Hawaii"
-TEX_reclaim_hawaii_desc:0 ""
+TEX_reclaim_hawaii_desc:0 "-"
 TEX_league_of_nations:0 "League of American States"
-TEX_league_of_nations_desc:0 ""
+TEX_league_of_nations_desc:0 "-"
 american_states_league_of_nations:0 "League of American States"
 TEX_american_school:0 "American School"
-TEX_american_school_desc:0 ""
+TEX_american_school_desc:0 "-"
 TEX_american_cooperation:0 "American League Cooperation"
 TEX_war_plan_red:0 "War Plan Red"
-TEX_war_plan_red_desc:0 ""
+TEX_war_plan_red_desc:0 "-"
 TEX_entente_embargo:0 "Embargo the Entente"
-TEX_entente_embargo_desc:0 ""
+TEX_entente_embargo_desc:0 "-"
 TEX_invade_canada:0 "Invade Canada"
-TEX_invade_canada_desc:0 ""
+TEX_invade_canada_desc:0 "-"
 
 ### Ideas ###
 TEX_pattons_mobility_plan:0 "Patton's Mobility Plan"
@@ -259,7 +259,7 @@ TEX_corportist_economic_policy:0 "Corporate Economic Policy"
 TEX_expanded_the_minutemen:0 "Expanded Minutemen Force"
 TEX_expanded_the_minutemen_desc:0 "The Minutemen force has been expanded from a paramilitary force into a secret police force."
 TEX_protecting_whites:0 "Protecting Our Race"
-TEX_protecting_whites_desc:0 ""
+TEX_protecting_whites_desc:0 "-"
 TEX_american_apartheid:0 "American Apartheid"
 TEX_american_apartheid_desc:0 "While Jim Crow laws segregating America were principally in the south, they have been made to be nation wide. Now from North to South and East to West segregation is a fact of life."
 TEX_whites_welfare:0 "Welfare For Whites"
