--- a/localisation/KR_AustriaFoci_l_english.yml
+++ b/localisation/KR_AustriaFoci_l_english.yml
@@ -10,7 +10,7 @@ AUS_switch_to_ahe:0 "A Centralised Austria-Hungary"
 
 AUS_austro-marxism:0 "Nations within a State"
 AUS_united_states:0 "A Federation of Equals"
-AUS_federate_hungary:0 ""
+AUS_federate_hungary:0 "-"
 
 ### These are placeholder localisations ###
 aus.700.t:0 "Kaiser Otto declares the Restauration of Dualism"
@@ -118,26 +118,26 @@ aus.7026.d:0 "Following Austria's foolish demands, blah blah"
 aus.7026.a:0 "For our Illyrian brethren!"
 aus.7026.b:0 "Nah."
 
-aus.9000.t:0 ""
-aus.9000.d:0 ""
-aus.9000.a:0 ""
+aus.9000.t:0 "-"
+aus.9000.d:0 "-"
+aus.9000.a:0 "-"
 
-aus.9001.t:0 ""
-aus.9001.d:0 ""
-aus.9001.a:0 ""
+aus.9001.t:0 "-"
+aus.9001.d:0 "-"
+aus.9001.a:0 "-"
 
-aus.9002.t:0 ""
-aus.9002.d:0 ""
-aus.9002.a:0 ""
+aus.9002.t:0 "-"
+aus.9002.d:0 "-"
+aus.9002.a:0 "-"
 
-aus.9003.t:0 ""
-aus.9003.d:0 ""
-aus.9003.a:0 ""
+aus.9003.t:0 "-"
+aus.9003.d:0 "-"
+aus.9003.a:0 "-"
 
-aus.9004.t:0 ""
-aus.9004.d:0 ""
-aus.9004.a:0 ""
+aus.9004.t:0 "-"
+aus.9004.d:0 "-"
+aus.9004.a:0 "-"
 
-aus.9005.t:0 ""
-aus.9005.d:0 ""
-aus.9005.a:0 ""
+aus.9005.t:0 "-"
+aus.9005.d:0 "-"
+aus.9005.a:0 "-"
