--- a/localisation/KR_Austria_l_english.yml
+++ b/localisation/KR_Austria_l_english.yml
@@ -194,7 +194,7 @@ AUS_light_tank_artillery_equipment_2_desc:0 "Aimed to provide effective fire sup
 
 AUS_light_tank_equipment_3: "Panzer L.41"
 AUS_light_tank_equipment_3_short: "Panzer L.41"
-#AUS_light_tank_equipment_3_desc: ""
+#AUS_light_tank_equipment_3_desc: "-"
 
 ### Air Equip ###
 AUS_fighter_equipment_0:0 "Phönix D.IV"
@@ -459,7 +459,7 @@ AUS_oob_yug_1:0 "Some of our forces will reinforce the Illyrian Army. \n"
 
 ### FOCI
 AUS_restore_dualism:0 "Restore Dualism"
-AUS_restore_dualism_desc:0 ""
+AUS_restore_dualism_desc:0 "-"
 
 AUS_integrating_illyria:0 "The Kingdom of Illyria"
 AUS_austrian_king:0 "An Austrian King"
@@ -485,8 +485,8 @@ AHE.2.d:0 "The Kingdom of Illyria was a state in Southeast Europe and Central Eu
 AHE.2.a:0 "Very well."
 
 AHE.3.t:0 "A Austrian King"
-AHE.3.d:0 ""
-AHE.3.a:0 ""
+AHE.3.d:0 "-"
+AHE.3.a:0 "-"
 
 AHE.4.t:0 "A Slavic King"
 AHE.4.d:0 "Our beloved Kaiser has decided to give the new formed Kingdom of Illyria to a Slavic Nobleman. The Serbian dynasty of Karađorđević was selected to rule over the new lands"
