--- a/localisation/KR_Capitulations_l_english.yml
+++ b/localisation/KR_Capitulations_l_english.yml
@@ -43,4 +43,4 @@ capt.7.e:0 "Austria is the only German power." #Austria
 capt.7.f:0 "The humiliation of Brest-Litovsk has been reversed!" #Russia
 capt.7.g:0 "The workers did what the Tsar could not!" #Soviets
 capt.7.h:0 "Germany finally paid for the devastation of the Weltkrieg." #Canada
-capt.7.i:0 "" #have to find a line for Nat France
+capt.7.i:0 "-" #have to find a line for Nat France
