--- a/localisation/KR_Combined_Syndicates_of_America_l_english.yml
+++ b/localisation/KR_Combined_Syndicates_of_America_l_english.yml
@@ -30,25 +30,25 @@ CSA_nationalized_resources:0 "Resource Nationalisation"
 CSA_centralized_planning:0 "Centralised Planning"
 CSA_state_quota:0 "State Quotas"
 CSA_totalist_economy:0 "Planned Economy"
-CSA_totalist_economy_desc:0 ""
+CSA_totalist_economy_desc:0 "-"
 CSA_workers_cooperatives:0 "Workers Cooperatives"
 CSA_democracy_industrial:0 "Industrial Democracy"
 CSA_market_socialist_economy:0 "Market Socialism"
-CSA_market_socialist_economy_desc:0 ""
+CSA_market_socialist_economy_desc:0 "-"
 CSA_worker_self_management:0 "Worker's Self-Management"
 CSA_voluntarily_collectivization:0 "Voluntarily Collectivisation"
 CSA_syndicalist_economy:0 "Syndicalist Economy"
-CSA_syndicalist_economy_desc:0 ""
+CSA_syndicalist_economy_desc:0 "-"
 CSA_worker_confederation:0 "Worker's Confederation"
-CSA_worker_confederation_desc:0 ""
+CSA_worker_confederation_desc:0 "-"
 CSA_worker_federation:0 "Worker's Federation"
-CSA_worker_federation_desc:0 ""
+CSA_worker_federation_desc:0 "-"
 CSA_centralized_republic:0 "Centralised Republic"
-CSA_centralized_republic_desc:0 ""
+CSA_centralized_republic_desc:0 "-"
 CSA_central_intelligence_agency:0 "Central Intelligence Agency"
-CSA_central_intelligence_agency_desc:0 ""
+CSA_central_intelligence_agency_desc:0 "-"
 CSA_strategic_service_office:0 "Office of Strategic Services"
-CSA_strategic_service_office_desc:0 ""
+CSA_strategic_service_office_desc:0 "-"
 CSA_state_bureaucracy:0 "Syndicalist Bureaucracy"
 CSA_syndicalist_civil_service:0 "Syndicalist Civil Service"
 CSA_liberty_ship:0 "Liberty Ships"
@@ -56,11 +56,11 @@ CSA_syndicalism_arsenal:0 "Arsenal of Syndicalism"
 CSA_longist_remnants:0 "Longist Remnants"
 CSA_mexican_american_treaty:0 "Mexican-American Friendship Treaty"
 CSA_worker_confedration:0 "Worker's Confederation"
-CSA_worker_confedration_desc:0 ""
+CSA_worker_confedration_desc:0 "-"
 CSA_worker_republic:0 "Worker's Republic"
-CSA_worker_republic_desc:0 ""
+CSA_worker_republic_desc:0 "-"
 CSA_centralized_union:0 "United Socialistic States of America"
-CSA_centralized_union_desc:0 ""
+CSA_centralized_union_desc:0 "-"
 CSA_peoples_ranger:0 "The People's Rangers"
 
 ### Parties ###
