--- a/localisation/KR_Fengtian_l_english.yml
+++ b/localisation/KR_Fengtian_l_english.yml
@@ -586,7 +586,7 @@ fengtian.new.41.d:0 "The third and final Hiroshima Package has arrived, containi
 fengtian.new.41.a:0 "Good"
 #Soy Agricultural Initiative
 fengtian.new.42.t:0 "The Soy Agricultural Initiative"
-fengtian.new.42.d:0 ""Soybeans are an extremely flexible crop, useful for human food, animal feed, fertiliser, and for a wide variety of industrial applications. Mantetsu's Research Wing has made great strides in making its growing, processing, and use more efficient, but planting percentages across Fengtian remain relatively stagnant. Korean farmers, who make up the majority of immigrants to Manchuria, are excellent rice planters, and in addition to many Chinese prefer to plant crops they have more experience with instead of Soy. \n\n In an attempt to change this, Mantetsu began the Soy Agricultural Initiative, a plan intending to educate farmers and incentivise the production of soy as a cash crop, but it has so far been poorly received. Mantetsu hopes to gain the government's support in promoting the initiative, which would almost certainly increase soy yields and therefore long term profits.""
+fengtian.new.42.d:0 "Soybeans are an extremely flexible crop, useful for human food, animal feed, fertiliser, and for a wide variety of industrial applications. Mantetsu's Research Wing has made great strides in making its growing, processing, and use more efficient, but planting percentages across Fengtian remain relatively stagnant. Korean farmers, who make up the majority of immigrants to Manchuria, are excellent rice planters, and in addition to many Chinese prefer to plant crops they have more experience with instead of Soy. \n\n In an attempt to change this, Mantetsu began the Soy Agricultural Initiative, a plan intending to educate farmers and incentivise the production of soy as a cash crop, but it has so far been poorly received. Mantetsu hopes to gain the government's support in promoting the initiative, which would almost certainly increase soy yields and therefore long term profits."
 fengtian.new.42.a:0 "Back the Initiative"
 fengtian.new.42.b:0 "We need no more soy"
 fengtian.new.43.t:0 "Japan and Korea Struggle with Drought"
@@ -774,73 +774,73 @@ fengtian.new.83.t:0 "Golden Dragon Cigarettes"
 fengtian.new.83.d:0 "The necessary preparations have been made, and production will soon begin. Judging by a telegraph message sent from Shanghai, Doihara intends to inform us of his progress over time."
 fengtian.new.83.a:0 "Good"
 
-fengtian.new.84.t:0 ""
-fengtian.new.84.d:0 ""
-fengtian.new.84.a:0 ""
+fengtian.new.84.t:0 "-"
+fengtian.new.84.d:0 "-"
+fengtian.new.84.a:0 "-"
 
-fengtian.new.85.t:0 ""
-fengtian.new.85.d:0 ""
-fengtian.new.85.a:0 ""
+fengtian.new.85.t:0 "-"
+fengtian.new.85.d:0 "-"
+fengtian.new.85.a:0 "-"
 
-fengtian.new.86.t:0 ""
-fengtian.new.86.d:0 ""
-fengtian.new.86.a:0 ""
+fengtian.new.86.t:0 "-"
+fengtian.new.86.d:0 "-"
+fengtian.new.86.a:0 "-"
 
-fengtian.new.87.t:0 ""
-fengtian.new.87.d:0 ""
-fengtian.new.87.a:0 ""
+fengtian.new.87.t:0 "-"
+fengtian.new.87.d:0 "-"
+fengtian.new.87.a:0 "-"
 
-fengtian.new.88.t:0 ""
-fengtian.new.88.d:0 ""
-fengtian.new.88.a:0 ""
+fengtian.new.88.t:0 "-"
+fengtian.new.88.d:0 "-"
+fengtian.new.88.a:0 "-"
 
-fengtian.new.89.t:0 ""
-fengtian.new.89.d:0 ""
-fengtian.new.89.a:0 ""
+fengtian.new.89.t:0 "-"
+fengtian.new.89.d:0 "-"
+fengtian.new.89.a:0 "-"
 
-fengtian.new.90.t:0 ""
-fengtian.new.90.d:0 ""
-fengtian.new.90.a:0 ""
+fengtian.new.90.t:0 "-"
+fengtian.new.90.d:0 "-"
+fengtian.new.90.a:0 "-"
 
-fengtian.new.91.t:0 ""
-fengtian.new.91.d:0 ""
-fengtian.new.91.a:0 ""
+fengtian.new.91.t:0 "-"
+fengtian.new.91.d:0 "-"
+fengtian.new.91.a:0 "-"
 
-fengtian.new.92.t:0 ""
-fengtian.new.92.d:0 ""
-fengtian.new.92.a:0 ""
+fengtian.new.92.t:0 "-"
+fengtian.new.92.d:0 "-"
+fengtian.new.92.a:0 "-"
 
-fengtian.new.93.t:0 ""
-fengtian.new.93.d:0 ""
-fengtian.new.93.a:0 ""
+fengtian.new.93.t:0 "-"
+fengtian.new.93.d:0 "-"
+fengtian.new.93.a:0 "-"
 
-fengtian.new.94.t:0 ""
-fengtian.new.94.d:0 ""
-fengtian.new.94.a:0 ""
+fengtian.new.94.t:0 "-"
+fengtian.new.94.d:0 "-"
+fengtian.new.94.a:0 "-"
 
-fengtian.new.95.t:0 ""
-fengtian.new.95.d:0 ""
-fengtian.new.95.a:0 ""
+fengtian.new.95.t:0 "-"
+fengtian.new.95.d:0 "-"
+fengtian.new.95.a:0 "-"
 
-fengtian.new.96.t:0 ""
-fengtian.new.96.d:0 ""
-fengtian.new.96.a:0 ""
+fengtian.new.96.t:0 "-"
+fengtian.new.96.d:0 "-"
+fengtian.new.96.a:0 "-"
 
-fengtian.new.97.t:0 ""
-fengtian.new.97.d:0 ""
-fengtian.new.97.a:0 ""
+fengtian.new.97.t:0 "-"
+fengtian.new.97.d:0 "-"
+fengtian.new.97.a:0 "-"
 
-fengtian.new.98.t:0 ""
-fengtian.new.98.d:0 ""
-fengtian.new.98.a:0 ""
+fengtian.new.98.t:0 "-"
+fengtian.new.98.d:0 "-"
+fengtian.new.98.a:0 "-"
 
-fengtian.new.99.t:0 ""
-fengtian.new.99.d:0 ""
-fengtian.new.99.a:0 ""
+fengtian.new.99.t:0 "-"
+fengtian.new.99.d:0 "-"
+fengtian.new.99.a:0 "-"
 
-fengtian.new.100.t:0 ""
-fengtian.new.100.d:0 ""
-fengtian.new.100.a:0 ""
+fengtian.new.100.t:0 "-"
+fengtian.new.100.d:0 "-"
+fengtian.new.100.a:0 "-"
 
 ### Informal Empire Mechanic ###
 fengtian.informalempire.1.t:0 "Expel the Japanese Bandits!"
