--- a/localisation/KR_Mexico_l_english.yml
+++ b/localisation/KR_Mexico_l_english.yml
@@ -99,7 +99,7 @@ mexico.11.b:0 "We are not ready for war"
 mexico.12.t:0 "The second Mexican-American War"
 mexico.12.d:0 "Our refusal to accept the Mexican territorial claims was the last straw. They decided to declare war upon us in order to try to gain those disputed territories by force. Now, troops of the National Guard, together with volunteers from local population, are being mobilised to repel the Mexican assaults!"
 mexico.12.a:0 "They must be stopped!"
-mexico.13.t:0 ""The Treaty of Acapulco"
+mexico.13.t:0 "The Treaty of Acapulco"
 mexico.13.d:0 "We've successfully beaten the American army and conquered the disputed border states. Now, we can send their humiliated leadership a peace in which they promise to recognise our territorial gains and withdrawn from disputed territory, however we could keep going in this war to try and get more land. What should we do?"
 mexico.13.a:0 "Sue for peace, we have had enough"
 mexico.13.b:0 "We shall reclaim all of our lands"
@@ -257,8 +257,8 @@ mexico.69.t:0 "Miner's Union Demands"
 mexico.69.d:0 "The powerful Miner's Union have a strong position in the CTM, and have just come forward with demands for better rights and pay for Miners. Fulfilling their demands will likely improve the quality of our nation's mines and resource excavation, but it will obviously cost us some money. What should we do?"
 mexico.69.a:0 "Fulfil their demands"
 mexico.69.b:0 "Refuse to fulfil their demands"
-mexico.64.t:0 ""The Americans demand their lost territories"
-mexico.64.d:0 "During the American Civil War, the Mexican army managed to conquer a good part of the western and southwestern American states. Despite a well-organised campaign of both non-violent resistance and guerilla attacks by the local Anglo population, we are determined to continue our occupation. Now, with their Civil War over, the American government is demanding that we return them these former territories. And, according to our intelligence reports, they are even considering going to war against Mexico for this! Even if we know that we have a historical right to those lands, we must keep in mind that the Americans are much more strong and organised now - it is very possible that, in case of war, we may not resist their offensive."
+mexico.64.t:0 "The Americans demand their lost territories"
+mexico.64.d:0 "During the American Civil War, the Mexican army managed to conquer a good part of the western and southwestern American states. Despite a well-organised campaign of both non-violent resistance and guerrilla attacks by the local Anglo population, we are determined to continue our occupation. Now, with their Civil War over, the American government is demanding that we return them these former territories. And, according to our intelligence reports, they are even considering going to war against Mexico for this! Even if we know that we have a historical right to those lands, we must keep in mind that the Americans are much more strong and organised now - it is very possible that, in case of war, we may not resist their offensive."
 mexico.64.a:0 "Accept their demands, we can't hope to win another war"
 mexico.64.b:0 "Let them come, we're ready to defend our land"
 mexico.65.t:0 "Mexico accepts our demands"
