--- a/localisation/KR_Mongolia_l_english.yml
+++ b/localisation/KR_Mongolia_l_english.yml
@@ -54,137 +54,137 @@ MON_Khan_bests:0 "Ungern's Guard"
 
 ### Foci ###
 MON_reinforce_army:0 "Reinforce the Mongol Army"
-MON_reinforce_army_desc:0 ""
+MON_reinforce_army_desc:0 "-"
 MON_improve_inf_I:0 "Improve Urga Roads"
-MON_improve_inf_I_desc:0 ""
+MON_improve_inf_I_desc:0 "-"
 MON_airforce:0 "Reinforce the Mongolian Air Force"
-MON_airforce_desc:0 ""
+MON_airforce_desc:0 "-"
 MON_improve_infantry_equipment:0 "Modernise Arms Production Methods"
-MON_improve_infantry_equipment_desc:0 ""
+MON_improve_infantry_equipment_desc:0 "-"
 MON_improve_infantry_equipment_II:0 "New Arms Testing"
-MON_improve_infantry_equipment_II_desc:0 ""
+MON_improve_infantry_equipment_II_desc:0 "-"
 MON_artillery_dev:0 "We Need Support for our Army!"
-MON_artillery_dev_desc:0 ""
+MON_artillery_dev_desc:0 "-"
 MON_conscript_the_tribesmen:0 "Conscript the Tribesmen"
-MON_conscript_the_tribesmen_desc:0 ""
+MON_conscript_the_tribesmen_desc:0 "-"
 MON_conscript_conquered_peoples:0 "Conscript the Conquered Peoples"
-MON_conscript_conquered_peoples_desc:0 ""
+MON_conscript_conquered_peoples_desc:0 "-"
 MON_doctrines_I:0 "New Doctrines development"
-MON_doctrines_I_desc:0 ""
+MON_doctrines_I_desc:0 "-"
 MON_doctrines_II:0 "New Doctrines development II"
-MON_doctrines_II_desc:0 ""
+MON_doctrines_II_desc:0 "-"
 MON_the_kahn_cav:0 "The Khan Cavalry"
-MON_the_kahn_cav_desc:0 ""
+MON_the_kahn_cav_desc:0 "-"
 MON_motorize_army:0 "Motorise Cavalry Corps"
-MON_motorize_army_desc:0 ""
+MON_motorize_army_desc:0 "-"
 MON_armor_research:0 "Armoured support"
-MON_armor_research_desc:0 ""
+MON_armor_research_desc:0 "-"
 MON_cav_the_best:0 "Recruit Ungern's Guard"
-MON_cav_the_best_desc:0 ""
+MON_cav_the_best_desc:0 "-"
 MON_the_khan_bests:0 "Finish the Recruitment of Ungern's Guard"
-MON_the_khan_bests_desc:0 ""
+MON_the_khan_bests_desc:0 "-"
 MON_the_khan_ultimate_weapon:0 "Khan Ultimate Weapon"
-MON_the_khan_ultimate_weapon_desc:0 ""
+MON_the_khan_ultimate_weapon_desc:0 "-"
 MON_the_russians_arent_watching:0 "The Russians aren't Watching"
-MON_the_russians_arent_watching_desc:0 ""
+MON_the_russians_arent_watching_desc:0 "-"
 MON_attack_tibet:0 "Attack Tibet"
-MON_attack_tibet_desc:0 ""
+MON_attack_tibet_desc:0 "-"
 MON_alliance_with_tibet:0 "Alliance with Tibet"
-MON_alliance_with_tibet_desc:0 ""
+MON_alliance_with_tibet_desc:0 "-"
 MON_no_need_tibetans_anymore:0 "We don't Need the Tibetans Anymore"
-MON_no_need_tibetans_anymore_desc:0 ""
+MON_no_need_tibetans_anymore_desc:0 "-"
 MON_mongol_minority_in_xibei:0 "Mongol Minority in Xibei"
-MON_mongol_minority_in_xibei_desc:0 ""
+MON_mongol_minority_in_xibei_desc:0 "-"
 MON_form_the_mongolian_empire:0 "Form the Mongolian Empire?"
-MON_form_the_mongolian_empire_desc:0 ""
+MON_form_the_mongolian_empire_desc:0 "-"
 MON_puppet_xibei:0 "Puppet Xibei"
-MON_puppet_xibei_desc:0 ""
+MON_puppet_xibei_desc:0 "-"
 MON_occupy_xibei:0 "Occupy Xibei"
-MON_occupy_xibei_desc:0 ""
+MON_occupy_xibei_desc:0 "-"
 MON_bring_down_the_shanquing:0 "Bring Down the Shanqing"
-MON_bring_down_the_shanquing_desc:0 ""
+MON_bring_down_the_shanquing_desc:0 "-"
 MON_bring_down_the_yunnan_warlords:0 "Bring Down the Yunnan Warlords"
-MON_bring_down_the_yunnan_warlords_desc:0 ""
+MON_bring_down_the_yunnan_warlords_desc:0 "-"
 MON_puppet_yunnan:0 "Puppet Yunnan"
-MON_puppet_yunnan_desc:0 ""
+MON_puppet_yunnan_desc:0 "-"
 MON_occupy_yunnan:0 "Occupy Yunnan"
-MON_occupy_yunnan_desc:0 ""
+MON_occupy_yunnan_desc:0 "-"
 MON_put_an_end_to_qing_rule:0 "It's the Time to End the Qing Rule"
-MON_put_an_end_to_qing_rule_desc:0 ""
+MON_put_an_end_to_qing_rule_desc:0 "-"
 MON_fate_of_the_qing_lands:0 "Fate of the Qing Lands"
-MON_fate_of_the_qing_lands_desc:0 ""
+MON_fate_of_the_qing_lands_desc:0 "-"
 MON_strike_at_manchuria:0 "Strike at Manchuria"
-MON_strike_at_manchuria_desc:0 ""
+MON_strike_at_manchuria_desc:0 "-"
 MON_restore_the_mongolian_lands_in_the_west:0 "Restore the East Borders"
-MON_restore_the_mongolian_lands_in_the_west_desc:0 ""
+MON_restore_the_mongolian_lands_in_the_west_desc:0 "-"
 MON_atack_the_alash_autonomy:0 "Attack Alash Autonomy"
-MON_atack_the_alash_autonomy_desc:0 ""
+MON_atack_the_alash_autonomy_desc:0 "-"
 MON_central_asia_intervention:0 "Central Asia Intervention"
-MON_central_asia_intervention_desc:0 ""
+MON_central_asia_intervention_desc:0 "-"
 MON_turkestan_alliance:0 "Alliance with Turkestan?"
-MON_turkestan_alliance_desc:0 ""
+MON_turkestan_alliance_desc:0 "-"
 MON_try_alash_alliance:0 "Try to Ally with Alash"
-MON_try_alash_alliance_desc:0 ""
+MON_try_alash_alliance_desc:0 "-"
 MON_attack_the_AOG:0 "Strike at the AOG"
-MON_attack_the_AOG_desc:0 ""
+MON_attack_the_AOG_desc:0 "-"
 MON_claim_the_german_colonies:0 "Claim the German Colonies"
-MON_claim_the_german_colonies_desc:0 ""
+MON_claim_the_german_colonies_desc:0 "-"
 MON_reclaim_macau:0 "Claim Macau"
-MON_reclaim_macau_desc:0 ""
+MON_reclaim_macau_desc:0 "-"
 MON_strike_at_the_legation_cities:0 "Destroy the Legation Cities"
-MON_strike_at_the_legation_cities_desc:0 ""
+MON_strike_at_the_legation_cities_desc:0 "-"
 MON_alash_autonomy_alliance:0 "Alliance with Alash?"
-MON_alash_autonomy_alliance_desc:0 ""
+MON_alash_autonomy_alliance_desc:0 "-"
 MON_try_turkestan_alliance:0 "Try to Ally Turkestan"
-MON_try_turkestan_alliance_desc:0 ""
+MON_try_turkestan_alliance_desc:0 "-"
 MON_invest_in_new_arms_factories:0 "Found the Urga Arms Factory"
-MON_invest_in_new_arms_factories_desc:0 ""
+MON_invest_in_new_arms_factories_desc:0 "-"
 MON_improve_xibei_inf_I:0 "Improve infrastructure in Xibei"
-MON_improve_xibei_inf_I_desc:0 ""
+MON_improve_xibei_inf_I_desc:0 "-"
 MON_improve_xibei_industry:0 "Found the Xibei Industrial Base"
-MON_improve_xibei_industry_desc:0 ""
+MON_improve_xibei_industry_desc:0 "-"
 MON_improve_infrastructure_in_the_east:0 "New Roads in the East"
-MON_improve_infrastructure_in_the_east_desc:0 ""
+MON_improve_infrastructure_in_the_east_desc:0 "-"
 MON_mongolian_war_economy:0 "The God of War"
-MON_mongolian_war_economy_desc:0 ""
+MON_mongolian_war_economy_desc:0 "-"
 MON_new_resources_invest:0 "Invest in New Resources"
-MON_new_resources_invest_desc:0 ""
+MON_new_resources_invest_desc:0 "-"
 MON_khem_beldyr_resources:0 "Khem Beldyr Resources"
-MON_khem_beldyr_resources_desc:0 ""
+MON_khem_beldyr_resources_desc:0 "-"
 MON_new_resources_start:0 "Invest in New Resources II"
-MON_new_resources_start_desc:0 ""
+MON_new_resources_start_desc:0 "-"
 MON_new_resources:0 "New mineral reserves"
-MON_new_resources_desc:0 ""
+MON_new_resources_desc:0 "-"
 MON_improve_airbases_in_mongolia:0 "Improve Air Bases in Mongolia"
-MON_improve_airbases_in_mongolia_desc:0 ""
+MON_improve_airbases_in_mongolia_desc:0 "-"
 MON_air_doctrines_I:0 "Air Formations"
-MON_air_doctrines_I_desc:0 ""
+MON_air_doctrines_I_desc:0 "-"
 MON_air_doctrines_II:0 "Found the Air Academy"
-MON_air_doctrines_II_desc:0 ""
+MON_air_doctrines_II_desc:0 "-"
 MON_improve_construction:0 "Improve Air Bases Construction Methods"
-MON_improve_construction_desc:0 ""
+MON_improve_construction_desc:0 "-"
 MON_fighter_focus:0 "Fighter Focus"
-MON_fighter_focus_desc:0 ""
+MON_fighter_focus_desc:0 "-"
 MON_light_fighter:0 "Air Supremacy Fighter Development"
-MON_light_fighter_desc:0 ""
+MON_light_fighter_desc:0 "-"
 MON_heavy_fighter:0 "Long Range Fighters Development"
-MON_heavy_fighter_desc:0 ""
+MON_heavy_fighter_desc:0 "-"
 MON_bomber_focus:0 "Bomber Focus"
-MON_bomber_focus_desc:0 ""
+MON_bomber_focus_desc:0 "-"
 MON_tactical_bomber:0 "Tactical Bomber Development"
-MON_tactical_bomber_desc:0 ""
+MON_tactical_bomber_desc:0 "-"
 MON_strike_at_the_cossaks:0 "Strike at the Cossacks"
-MON_strike_at_the_cossaks_desc:0 ""
+MON_strike_at_the_cossaks_desc:0 "-"
 MON_strike_at_the_caucassus:0 "Strike at the Caucasus"
-MON_strike_at_the_caucassus_desc:0 ""
+MON_strike_at_the_caucassus_desc:0 "-"
 MON_attack_turkestan:0 "Conquer Turkestan"
-MON_attack_turkestan_desc:0 ""
+MON_attack_turkestan_desc:0 "-"
 MON_invasion_of_persia:0 "Reclaim Persia"
-MON_invasion_of_persia_desc:0 ""
+MON_invasion_of_persia_desc:0 "-"
 MON_strategical_bomber:0 "Strategic Destruction Development"
-MON_strategical_bomber_desc:0 ""
+MON_strategical_bomber_desc:0 "-"
 MON_military_res_inst:0 "Improve Military Research Institutes"
-MON_military_res_inst_desc:0 ""
+MON_military_res_inst_desc:0 "-"
 
 ### Tooltips ###
 mon_xibei_tooltip:0 "To attack Shanqing you must own or have a puppet own: §YUrumqi§! and §YQinghai§! and reformed the Mongol Khanate"
