--- a/localisation/KR_USA_l_english.yml
+++ b/localisation/KR_USA_l_english.yml
@@ -256,13 +256,13 @@ USA_the_faa_act_desc:0 "Air travel is coming into is own now and to help regulat
 USA_pass_nira:0 "National Industrial Recovery Act"
 USA_pass_nira_desc:0 "As part of the Fair Deal congress has passed the National Industrial Recovery Act which will help give the industries recover from the Great Depression, particularly in the Steel Belt where the CSA was the most active. This program should also help wither support away from the CSA."
 USA_federal_energy_commision:0 "Atomic Energy Commission"
-USA_federal_energy_commision_desc:0 ""
+USA_federal_energy_commision_desc:0 "-"
 USA_the_brain_trust:0 "The Brain Trust"
 USA_the_brain_trust_desc:0 "To help make sure that we can solve the Depression once and for all, it has been proposed that we gather all the best minds in America and work with them to help solve the issue. A second part of the proposal is to also help provide more funding for the university research throughout the country."
 USA_mining_act:0 "Expand the Bureau Of Mines"
 USA_mining_act_desc:0 "We should help expand the Bureau Of Mines and give it the power to regulate the various industries that work with mines. In such a way we can make sure that the the miners are kept safe while the business profit."
 USA_agricultural_adjustment_act:0 "Agricultural Adjustment Act"
-USA_agricultural_adjustment_act_desc:0 ""
+USA_agricultural_adjustment_act_desc:0 "-"
 USA_social_security:0 "Pass Social Security"
 USA_social_security_desc:0 "One of the more ambitious plans of the Fair Deal is to create a Social Security for the country that will help give the elderly a pension to survive off so that all can have something to work towards as they grow old."
 USA_economy_has_recovered:0 "The Economy Has Recovered"
@@ -402,7 +402,7 @@ USA_worst_is_over:0 "The Worst is over"
 USA_worst_is_over_desc:0 "Reforms that have begun following the election have slowly but surely are bringing the economy back on its feet. It will take some time to fully recover though. With fears of a civil war though spreading through the country, some businesses wonder if this will actually jump start the economy, but who wants to take that risk..."
 USA_expanded_fbi:0 "Expanded FBI"
 USA_the_new_economy:0 "A Flourishing Economy"
-USA_the_new_economy_desc:0 ""
+USA_the_new_economy_desc:0 "-"
 USA_women_corps:0 "Women's Army Corps"
 USA_war_rations:0 "War Rationing"
 USA_war_bonds:0 "War Bonds"
