--- a/localisation/KR_World_News_l_english.yml
+++ b/localisation/KR_World_News_l_english.yml
@@ -433,7 +433,7 @@ worldnews.57.b:0 "The Revolution spreads from the Indian workers to the Burmese 
 
 ### City Fall Events ###
 
-worldnews.250.t:0 ""
+worldnews.250.t:0 "-"
 
 worldnews.251.t:0 "The Fall of London" #Germany
 worldnews.251.d:0 "Reports from London confirm that the English capital has been captured by advancing German troops after long, staged battles across the Thames river.\n\nUnion forces put up stiff resistance, hoping to delay the Imperial forces for as long as possible, but were eventually beaten back by the Germans.\n\nFor the first time since William the Conqueror, London has fallen to a foreign invader."
