--- a/localisation/KR_Japan_Foreign_l_english.yml
+++ b/localisation/KR_Japan_Foreign_l_english.yml
@@ -26,7 +26,7 @@ JAP_SIBERIA_desc:0 "The lands of Siberia have seceded from Russia, and are now s
 JAP_SUN_RISE:0 "The Rising Sun"
 JAP_SUN_RISE_desc:0 "With the political problems at home suppressed, it is time for the Land of the Rising Sun to look beyond her borders. We have many choices, each with their own rewards and challenges. Once we decide which path to take, we can later go more into depth on how to obtain it."
 JAP_create_riken:0 "Create Rikagaku Kenkyusho"
-JAP_create_riken_desc:0 ""
+JAP_create_riken_desc:0 "-"
 JAP_SUN_GERMAN:0 "Bring Down the German Goliath!"
 JAP_SUN_GERMAN_desc:0 "The German Empire stands at the top of the world and occupies lands in Asia exploiting its peoples and threatening our own possessions on the mainland! We must bring down the German Goliath!"
 JAP_SUN_RUSSIA:0 "Operation Kuma"
